# CompetitiveEdge

./: README.md  comp.cc
v1.1/: comp.cc  debug.h
v1.2/: CMakeLists.txt  parse.cpp
